MSANTOS - 2/28/201 (10:45AM) - Updated

--- a/CMS2.DataAccess/CMS2.DataAccess.csproj
+++ b/CMS2.DataAccess/CMS2.DataAccess.csproj
@@ -49,15 +49,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\..\AP CARGO Local Repo\CMS2.DataAccess\bin\Debug\EntityFramework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\..\AP CARGO Local Repo\CMS2.DataAccess\bin\Debug\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core">
-      <HintPath>..\APCargo.Web\bin\Microsoft.AspNet.Identity.Core.dll</HintPath>
+      <HintPath>..\..\AP CARGO Local Repo\CMS2.DataAccess\bin\Debug\Microsoft.AspNet.Identity.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
