--- a/CMS2.Client/CMS2.Client.csproj
+++ b/CMS2.Client/CMS2.Client.csproj
@@ -94,36 +94,30 @@
     <Reference Include="CrystalDecisions.Shared, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="CrystalDecisions.Windows.Forms, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>C:\Users\Dev - Kim\Desktop\CMS2 Client Source Code\CMS Client Source Code\CMS2.Client\bin\Debug\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>C:\Users\Dev - Kim\Desktop\CMS2 Client Source Code\CMS Client Source Code\CMS2.Client\bin\Debug\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="FlashControlV71, Version=1.0.3187.32366, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
-    <Reference Include="MDIWindowManager, Version=2.1.2521.32075, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MDIWindowManager.2.1.0\lib\MDIWindowManager.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+      <HintPath>C:\Users\Dev - Kim\Desktop\CMS Repository\CMS2.BusinessLogic\Helpers\bin\Debug\Microsoft.AspNet.Identity.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
+      <HintPath>C:\Users\Dev - Kim\Desktop\CMS Repository\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Practices.Unity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
+      <HintPath>C:\Users\Dev - Kim\Desktop\CMS Repository\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Practices.Unity.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+      <HintPath>C:\Users\Dev - Kim\Desktop\CMS Repository\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
+      <HintPath>C:\Users\Dev - Kim\Desktop\CMS Repository\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.QualityTools.Testing.Fakes, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -330,6 +324,18 @@
     <Compile Include="Forms\TrackingReports\PickupCargoManifestReport.cs" />
     <Compile Include="Forms\TrackingReports\SegregationReport.cs" />
     <Compile Include="Forms\TrackingReports\UnbundleReport.cs" />
+    <Compile Include="ReportModels\ds_PaymentSummary.cs">
+      <DependentUpon>ds_PaymentSummary.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="ReportModels\ds_PaymentSummary.designer.cs">
+      <DependentUpon>ds_PaymentSummary.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reports\PaymentSummary.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PaymentSummary.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Reports\PaymentSummaryReport.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -452,13 +458,6 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DesignTime>True</DesignTime>
     </Compile>
-    <Compile Include="Reports\PaymentSummary.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>PaymentSummary.rpt</DependentUpon>
-      <SubType>Component</SubType>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Compile>
     <Compile Include="Reports\FreightCollectSubReport.cs">
       <DependentUpon>FreightCollectSubReport.rpt</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -545,6 +544,10 @@
     <Compile Include="ViewModels\PaymentTurnoverViewModel.cs" />
     <Content Include="Images\logos.ico" />
     <Content Include="DfIcon.ico" />
+    <Content Include="Reports\PaymentSummary.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>PaymentSummary.cs</LastGenOutput>
+    </Content>
     <EmbeddedResource Include="Reports\PaymentSummaryReport.resx">
       <DependentUpon>PaymentSummaryReport.cs</DependentUpon>
     </EmbeddedResource>
@@ -554,6 +557,17 @@
     <EmbeddedResource Include="Reports\rpt_PaymentSummary.resx">
       <DependentUpon>rpt_PaymentSummary.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="ReportModels\ds_PaymentSummary.xsc">
+      <DependentUpon>ds_PaymentSummary.xsd</DependentUpon>
+    </None>
+    <None Include="ReportModels\ds_PaymentSummary.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>ds_PaymentSummary1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="ReportModels\ds_PaymentSummary.xss">
+      <DependentUpon>ds_PaymentSummary.xsd</DependentUpon>
+    </None>
     <None Include="Reports\report_PaymentSummary.rpt" />
     <None Include="Reports\rpt_FreightCollectPaymentSummary.rpt" />
     <None Include="Resources\csv.png" />
@@ -636,11 +650,6 @@
     <Content Include="Reports\ShipmentPackagesSubReport.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>ShipmentPackagesSubReport.cs</LastGenOutput>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Reports\PaymentSummary.rpt">
-      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
-      <LastGenOutput>PaymentSummary.cs</LastGenOutput>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Reports\PrePaidSubReport.rpt">
