--- a/CMS2.Common/CMS2.Common.csproj
+++ b/CMS2.Common/CMS2.Common.csproj
@@ -49,7 +49,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\AP CARGO Local Repo\CMS2.Common\bin\Debug\Microsoft.AspNet.Identity.Core.dll</HintPath>
+      <HintPath>C:\Users\Dev - Kim\Desktop\CMS Repository\CMS2.BusinessLogic\Helpers\bin\Debug\Microsoft.AspNet.Identity.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
