--- a/CMS2.Client/CMS2.Client.csproj
+++ b/CMS2.Client/CMS2.Client.csproj
@@ -335,6 +335,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>PaymentSummary.rpt</DependentUpon>
       <SubType>Component</SubType>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Compile Include="Reports\PaymentSummaryReport.cs">
       <SubType>Component</SubType>
@@ -349,10 +350,18 @@
       <DependentUpon>PaymentSummary_Report.cs</DependentUpon>
     </Compile>
     <Compile Include="Reports\report_PaymentSummary.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>report_PaymentSummary.rpt</DependentUpon>
       <SubType>Component</SubType>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Compile Include="Reports\rpt_FreightCollectPaymentSummary.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>rpt_FreightCollectPaymentSummary.rpt</DependentUpon>
       <SubType>Component</SubType>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Compile Include="Reports\rpt_PaymentSummary.cs">
       <SubType>Component</SubType>
@@ -547,6 +556,7 @@
     <Content Include="Reports\PaymentSummary.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>PaymentSummary.cs</LastGenOutput>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <EmbeddedResource Include="Reports\PaymentSummaryReport.resx">
       <DependentUpon>PaymentSummaryReport.cs</DependentUpon>
@@ -554,6 +564,16 @@
     <EmbeddedResource Include="Reports\PaymentSummary_Report.resx">
       <DependentUpon>PaymentSummary_Report.cs</DependentUpon>
     </EmbeddedResource>
+    <Content Include="Reports\report_PaymentSummary.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>report_PaymentSummary.cs</LastGenOutput>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Reports\rpt_FreightCollectPaymentSummary.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>rpt_FreightCollectPaymentSummary.cs</LastGenOutput>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <EmbeddedResource Include="Reports\rpt_PaymentSummary.resx">
       <DependentUpon>rpt_PaymentSummary.cs</DependentUpon>
     </EmbeddedResource>
@@ -568,8 +588,6 @@
     <None Include="ReportModels\ds_PaymentSummary.xss">
       <DependentUpon>ds_PaymentSummary.xsd</DependentUpon>
     </None>
-    <None Include="Reports\report_PaymentSummary.rpt" />
-    <None Include="Reports\rpt_FreightCollectPaymentSummary.rpt" />
     <None Include="Resources\csv.png" />
     <None Include="Resources\excel.png" />
     <None Include="Resources\pdf.png" />
