--- a/CMS2.Client/App.config
+++ b/CMS2.Client/App.config
@@ -19,12 +19,12 @@
     <add key="UpInter" value="10" />
     <add key="DownInter" value="50" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
-    <add key ="isSync" value="false"/>
-    <add key ="Filter" value=""/>
+    <add key="isSync"  value="false"/>
+    <add key="Filter"  value=""/>
   </appSettings>
   <connectionStrings>
-    <add name="Cms" connectionString="Data Source=192.168.1.58,1434;Initial Catalog=cms2_Beta3;User ID=sa;Password=mssql;Connect Timeout=20;Connection Lifetime=0;Pooling=true;" providerName="System.Data.SqlClient" />
-    <add name="CmsCentral" connectionString="Data Source=192.168.0.58;Initial Catalog=cms2_Beta3;User ID=sa;Password=z@nixtri2016;Connect Timeout=180;Connection Lifetime=0;Pooling=true;" providerName="System.Data.SqlClient" />
+    <add name="Cms" connectionString="Data Source=192.168.5.1;Initial Catalog=cms2_Beta3;User ID=sa;Password=d0me$tic$QL;Connect Timeout=20;Connection Lifetime=0;Pooling=true;" providerName="System.Data.SqlClient" />
+    <add name="CmsCentral" connectionString="Data Source=192.168.5.3;Initial Catalog=cms2_Beta3;User ID=sa;Password=Ap123456#;Connect Timeout=180;Connection Lifetime=0;Pooling=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <entityFramework>
@@ -52,45 +52,45 @@
 
   <userSettings>
     <CMS2.Client.Properties.Settings>
-      <setting name="DeviceCode" serializeAs="String">
-        <value>S005</value>
-      </setting>
-      <setting name="DeviceRevenueUnitId" serializeAs="String">
-        <value>00000000-0000-0000-0000-000000000000</value>
-      </setting>
-      <setting name="DeviceBcoId" serializeAs="String">
-        <value>00000000-0000-0000-0000-000000000000</value>
-      </setting>
-      <setting name="LocalDbUsername" serializeAs="String">
-        <value>cmsuser</value>
-      </setting>
-      <setting name="LocalDbPassword" serializeAs="String">
-        <value>P9ssW0rd</value>
-      </setting>
-      <setting name="LocalDbServer" serializeAs="String">
-        <value>192.168.0.58</value>
-      </setting>
-      <setting name="CentralDbName" serializeAs="String">
-        <value>cms2_Beta1</value>
-      </setting>
-      <setting name="CentralUsername" serializeAs="String">
-        <value>sa</value>
-      </setting>
-      <setting name="LocalDbName" serializeAs="String">
-        <value>cms</value>
-      </setting>
-      <setting name="CentralServerIp" serializeAs="String">
-        <value>192.168.15.108\MHINE</value>
-      </setting>
-      <setting name="CentralPassword" serializeAs="String">
-        <value>admin!@#</value>
-      </setting>
-      <setting name="IsSynchronizationSetup" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="Filter" serializeAs="String">
-        <value>Manila</value>
-      </setting>
+        <setting name="DeviceCode" serializeAs="String">
+            <value>S005</value>
+        </setting>
+        <setting name="DeviceRevenueUnitId" serializeAs="String">
+            <value>00000000-0000-0000-0000-000000000000</value>
+        </setting>
+        <setting name="DeviceBcoId" serializeAs="String">
+            <value>00000000-0000-0000-0000-000000000000</value>
+        </setting>
+        <setting name="LocalDbUsername" serializeAs="String">
+            <value>sa</value>
+        </setting>
+        <setting name="LocalDbPassword" serializeAs="String">
+            <value>Ap123456#</value>
+        </setting>
+        <setting name="LocalDbServer" serializeAs="String">
+            <value>192.168.5.3</value>
+        </setting>
+        <setting name="CentralDbName" serializeAs="String">
+            <value>cms2_Beta3</value>
+        </setting>
+        <setting name="CentralUsername" serializeAs="String">
+            <value>sa</value>
+        </setting>
+        <setting name="LocalDbName" serializeAs="String">
+            <value>cms</value>
+        </setting>
+        <setting name="CentralServerIp" serializeAs="String">
+            <value>192.168.15.108\MHINE</value>
+        </setting>
+        <setting name="CentralPassword" serializeAs="String">
+            <value>admin!@#</value>
+        </setting>
+        <setting name="IsSynchronizationSetup" serializeAs="String">
+            <value>False</value>
+        </setting>
+        <setting name="Filter" serializeAs="String">
+            <value>Manila</value>
+        </setting>
     </CMS2.Client.Properties.Settings>
   </userSettings>
 </configuration>
