--- a/CMS2.Client/CMS2.Client.csproj
+++ b/CMS2.Client/CMS2.Client.csproj
@@ -43,6 +43,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -160,39 +161,39 @@
     <Reference Include="Telerik.Reporting, Version=11.0.17.201, Culture=neutral, PublicKeyToken=a9d7983dfcc261be" />
     <Reference Include="Telerik.ReportViewer.WinForms, Version=11.0.17.201, Culture=neutral, PublicKeyToken=a9d7983dfcc261be, processorArchitecture=MSIL" />
     <Reference Include="Telerik.WinControls, Version=2017.1.117.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL">
-      <HintPath>..\lib\RCWF\2017.1.117.40\Telerik.WinControls.dll</HintPath>
+      <HintPath>bin\Debug\Telerik.WinControls.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Telerik.WinControls.GridView, Version=2017.1.117.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL">
-      <HintPath>..\lib\RCWF\2017.1.117.40\Telerik.WinControls.GridView.dll</HintPath>
+      <HintPath>bin\Debug\Telerik.WinControls.GridView.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Telerik.WinControls.PdfViewer, Version=2017.1.117.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL">
-      <HintPath>..\lib\RCWF\2017.1.117.40\Telerik.WinControls.PdfViewer.dll</HintPath>
+      <HintPath>bin\Debug\Telerik.WinControls.PdfViewer.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Telerik.WinControls.RadDock, Version=2017.1.117.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL">
-      <HintPath>..\lib\RCWF\2017.1.117.40\Telerik.WinControls.RadDock.dll</HintPath>
+      <HintPath>bin\Debug\Telerik.WinControls.RadDock.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Telerik.WinControls.Themes.Aqua, Version=2017.1.117.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL">
-      <HintPath>..\lib\RCWF\2017.1.117.40\Telerik.WinControls.Themes.Aqua.dll</HintPath>
+      <HintPath>bin\Debug\Telerik.WinControls.Themes.Aqua.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Telerik.WinControls.Themes.Office2010Black, Version=2017.1.117.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL">
-      <HintPath>..\lib\RCWF\2017.1.117.40\Telerik.WinControls.Themes.Office2010Black.dll</HintPath>
+      <HintPath>bin\Debug\Telerik.WinControls.Themes.Office2010Black.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Telerik.WinControls.Themes.VisualStudio2012Dark, Version=2017.1.117.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL">
-      <HintPath>..\lib\RCWF\2017.1.117.40\Telerik.WinControls.Themes.VisualStudio2012Dark.dll</HintPath>
+      <HintPath>bin\Debug\Telerik.WinControls.Themes.VisualStudio2012Dark.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Telerik.WinControls.Themes.VisualStudio2012Light, Version=2017.1.117.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL">
-      <HintPath>..\lib\RCWF\2017.1.117.40\Telerik.WinControls.Themes.VisualStudio2012Light.dll</HintPath>
+      <HintPath>bin\Debug\Telerik.WinControls.Themes.VisualStudio2012Light.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Telerik.WinControls.UI, Version=2017.1.117.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL">
-      <HintPath>..\lib\RCWF\2017.1.117.40\Telerik.WinControls.UI.dll</HintPath>
+      <HintPath>bin\Debug\Telerik.WinControls.UI.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Telerik.Windows.Documents.Core, Version=2017.1.109.40, Culture=neutral, PublicKeyToken=5803cfa389c90ce7, processorArchitecture=MSIL">
@@ -220,11 +221,11 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="TelerikCommon, Version=2017.1.117.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL">
-      <HintPath>..\lib\RCWF\2017.1.117.40\TelerikCommon.dll</HintPath>
+      <HintPath>bin\Debug\TelerikCommon.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="TelerikData, Version=2017.1.117.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL">
-      <HintPath>..\lib\RCWF\2017.1.117.40\TelerikData.dll</HintPath>
+      <HintPath>bin\Debug\TelerikData.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="TelerikExport, Version=2017.1.117.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL">
@@ -354,6 +355,7 @@
     <Compile Include="Reports\rpt_PaymentSummary.Designer.cs">
       <DependentUpon>rpt_PaymentSummary.cs</DependentUpon>
     </Compile>
+    <Compile Include="SyncHelper\SyncTables.cs" />
     <Compile Include="Utilities\AppUser.cs" />
     <Compile Include="Forms\ChangePassword.cs">
       <SubType>Form</SubType>
@@ -401,6 +403,7 @@
     </Compile>
     <Compile Include="ReportModels\PaymentSummary.cs">
       <DependentUpon>PaymentSummary.xsd</DependentUpon>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="ReportModels\PaymentSummary.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -419,6 +422,7 @@
     </Compile>
     <Compile Include="ReportModels\TrackingDailyTrip.cs">
       <DependentUpon>TrackingDailyTrip.xsd</DependentUpon>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="ReportModels\TrackingDailyTrip.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -433,6 +437,7 @@
     </Compile>
     <Compile Include="ReportModels\TrackingInsack.cs">
       <DependentUpon>TrackingInsack.xsd</DependentUpon>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="ReportModels\TrackingInsack.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -694,7 +699,6 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="CMS2.Client_TemporaryKey.pfx" />
-    <Fakes Include="Fakes\Telerik.WinControls.GridView.fakes" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
