--- a/CMS2.Client/App.config
+++ b/CMS2.Client/App.config
@@ -20,7 +20,7 @@
     <add key="DownInter" value="50" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="isSync"  value="false"/>
-    <add key="Filter"  value=""/>
+    <add key="Filter"  value="Manila"/>
   </appSettings>
   <connectionStrings>
     <add name="Cms" connectionString="Data Source=192.168.5.1;Initial Catalog=cms2_Beta3;User ID=sa;Password=d0me$tic$QL;Connect Timeout=20;Connection Lifetime=0;Pooling=true;" providerName="System.Data.SqlClient" />
