--- a/CMS2.Client/App.config
+++ b/CMS2.Client/App.config
@@ -23,8 +23,8 @@
     <add key="Filter"  value="Manila"/>
   </appSettings>
   <connectionStrings>
-    <add name="Cms" connectionString="Data Source=192.168.5.1;Initial Catalog=cms2_Beta3;User ID=sa;Password=d0me$tic$QL;Connect Timeout=20;" providerName="System.Data.SqlClient" />
-    <add name="CmsCentral" connectionString="Data Source=192.168.5.1;Initial Catalog=cms2_Beta4;User ID=sa;Password=d0me$tic$QL;Connect Timeout=20;" providerName="System.Data.SqlClient" />
+    <add name="Cms" connectionString="Data Source=192.168.5.1;Initial Catalog=cms2_Beta3;User ID=sa;Password=d0me$tic$QL;Connect Timeout=20;Connection Lifetime=0;Pooling=true;" providerName="System.Data.SqlClient" />
+    <add name="CmsCentral" connectionString="Data Source=192.168.5.1;Initial Catalog=cms2_Beta4;User ID=sa;Password=d0me$tic$QL;Connect Timeout=20;Connection Lifetime=0;Pooling=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <entityFramework>
@@ -65,10 +65,10 @@
             <value>sa</value>
         </setting>
         <setting name="LocalDbPassword" serializeAs="String">
-            <value>d0me$tic$QL</value>
+            <value>Ap123456#</value>
         </setting>
         <setting name="LocalDbServer" serializeAs="String">
-            <value>192.168.5.1</value>
+            <value>192.168.5.3</value>
         </setting>
         <setting name="CentralDbName" serializeAs="String">
             <value>cms2_Beta3</value>
@@ -77,13 +77,13 @@
             <value>sa</value>
         </setting>
         <setting name="LocalDbName" serializeAs="String">
-            <value>cms2_Beta3</value>
+            <value>cms</value>
         </setting>
         <setting name="CentralServerIp" serializeAs="String">
-            <value>192.168.5.1</value>
+            <value>192.168.15.108\MHINE</value>
         </setting>
         <setting name="CentralPassword" serializeAs="String">
-            <value>d0me$tic$QL</value>
+            <value>admin!@#</value>
         </setting>
         <setting name="IsSynchronizationSetup" serializeAs="String">
             <value>False</value>
