3/7/2017 - Update in Report -MSANTOS

--- a/CMS2.Client/App.config
+++ b/CMS2.Client/App.config
@@ -23,7 +23,7 @@
     <add key="Filter"  value="Manila"/>
   </appSettings>
   <connectionStrings>
-    <add name="Cms" connectionString="Data Source=192.168.5.1;Initial Catalog=cms2_Beta3;User ID=sa;Password=d0me$tic$QL;Connect Timeout=20;Connection Lifetime=0;Pooling=true;" providerName="System.Data.SqlClient" />
+    <add name="Cms" connectionString="Data Source=192.168.1.58,1434;Initial Catalog=cms2_Beta3;User ID=sa;Password=mssql;Connect Timeout=20;Connection Lifetime=0;Pooling=true;" providerName="System.Data.SqlClient" />
     <add name="CmsCentral" connectionString="Data Source=192.168.5.1;Initial Catalog=cms2_Beta4;User ID=sa;Password=d0me$tic$QL;Connect Timeout=20;Connection Lifetime=0;Pooling=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
