--- a/CMS2.BusinessLogic/CMS2.BusinessLogic.csproj
+++ b/CMS2.BusinessLogic/CMS2.BusinessLogic.csproj
@@ -52,14 +52,14 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Users\Dev - Kim\Desktop\CMS2 Client Source Code\CMS Client Source Code\CMS2.BusinessLogic\bin\Debug\BarcodeLib.dll</HintPath>
     </Reference>
-    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL">
-      <HintPath>..\..\AP CARGO Local Repo\CMS2.BusinessLogic\Helpers\bin\Debug\CrystalDecisions.CrystalReports.Engine.dll</HintPath>
+    <Reference Include="CrystalDecisions.CrystalReports.Engine">
+      <HintPath>..\..\AP CARGO Web Central Local Repository\BusinessLogic\bin\Debug\CrystalDecisions.CrystalReports.Engine.dll</HintPath>
     </Reference>
-    <Reference Include="CrystalDecisions.ReportSource, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL">
-      <HintPath>..\..\AP CARGO Local Repo\CMS2.BusinessLogic\Helpers\bin\Debug\CrystalDecisions.ReportSource.dll</HintPath>
+    <Reference Include="CrystalDecisions.ReportSource">
+      <HintPath>..\..\AP CARGO Web Central Local Repository\BusinessLogic\bin\Debug\CrystalDecisions.ReportSource.dll</HintPath>
     </Reference>
-    <Reference Include="CrystalDecisions.Shared, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL">
-      <HintPath>..\..\AP CARGO Local Repo\CMS2.BusinessLogic\Helpers\bin\Debug\CrystalDecisions.Shared.dll</HintPath>
+    <Reference Include="CrystalDecisions.Shared">
+      <HintPath>..\..\AP CARGO Web Central Local Repository\BusinessLogic\bin\Debug\CrystalDecisions.Shared.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -157,7 +157,6 @@
     <Compile Include="RemarkBL.cs" />
     <Compile Include="ReportModels\StatementOfAccountDataSet.cs">
       <DependentUpon>StatementOfAccountDataSet.xsd</DependentUpon>
-      <SubType>Component</SubType>
     </Compile>
     <Compile Include="ReportModels\StatementOfAccountDataSet.Designer.cs">
       <DependentUpon>StatementOfAccountDataSet.xsd</DependentUpon>
