--- a/CMS2.Client/App.config
+++ b/CMS2.Client/App.config
@@ -25,6 +25,7 @@
   <connectionStrings>
     <add name="Cms" connectionString="Data Source=192.168.5.1;Initial Catalog=cms2_Beta3;User ID=sa;Password=d0me$tic$QL;Connect Timeout=20;" providerName="System.Data.SqlClient" />
     <add name="CmsCentral" connectionString="Data Source=192.168.5.1;Initial Catalog=cms2_Beta4;User ID=sa;Password=d0me$tic$QL;Connect Timeout=20;" providerName="System.Data.SqlClient" />
+     <add name="CmsSampleServer" connectionString="Data Source=192.168.5.1;Initial Catalog=cms2_Beta3;User ID=sa;Password=d0me$tic$QL;Connect Timeout=20;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <entityFramework>
