--- a/CMS2.Client/CMS2.Client.csproj
+++ b/CMS2.Client/CMS2.Client.csproj
@@ -143,6 +143,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Services" />
