--- a/AP CARGO SERVICE/App.config
+++ b/AP CARGO SERVICE/App.config
@@ -23,7 +23,7 @@
                 <value>Zamboanga</value>
             </setting>
             <setting name="Provision" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="DeprovisionServer" serializeAs="String">
                 <value>False</value>
