--- a/CMS2.Client/App.config
+++ b/CMS2.Client/App.config
@@ -23,9 +23,8 @@
     <add key="Filter"  value="Manila"/>
   </appSettings>
   <connectionStrings>
-    <add name="Cms" connectionString="Data Source=192.168.5.1;Initial Catalog=cms2_Beta3;User ID=sa;Password=d0me$tic$QL;Connect Timeout=20;" providerName="System.Data.SqlClient" />
-    <add name="CmsCentral" connectionString="Data Source=192.168.5.1;Initial Catalog=cms2_Beta4;User ID=sa;Password=d0me$tic$QL;Connect Timeout=20;" providerName="System.Data.SqlClient" />
-     <add name="CmsSampleServer" connectionString="Data Source=192.168.5.1;Initial Catalog=cms2_Beta3;User ID=sa;Password=d0me$tic$QL;Connect Timeout=20;" providerName="System.Data.SqlClient" />
+    <add name="Cms" connectionString="Data Source=192.168.5.1;Initial Catalog=cms2_Beta5;User ID=sa;Password=d0me$tic$QL;Connect Timeout=20;" providerName="System.Data.SqlClient" />
+    <add name="CmsCentral" connectionString="Data Source=192.168.5.3;Initial Catalog=cms2_Beta4;User ID=sa;Password=Ap123456#;Connect Timeout=20;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <entityFramework>
@@ -53,45 +52,45 @@
 
   <userSettings>
     <CMS2.Client.Properties.Settings>
-        <setting name="DeviceCode" serializeAs="String">
-            <value>S005</value>
-        </setting>
-        <setting name="DeviceRevenueUnitId" serializeAs="String">
-            <value>00000000-0000-0000-0000-000000000000</value>
-        </setting>
-        <setting name="DeviceBcoId" serializeAs="String">
-            <value>00000000-0000-0000-0000-000000000000</value>
-        </setting>
-        <setting name="LocalDbUsername" serializeAs="String">
-            <value>sa</value>
-        </setting>
-        <setting name="LocalDbPassword" serializeAs="String">
-            <value>d0me$tic$QL</value>
-        </setting>
-        <setting name="LocalDbServer" serializeAs="String">
-            <value>192.168.5.1</value>
-        </setting>
-        <setting name="CentralDbName" serializeAs="String">
-            <value>cms2_Beta3</value>
-        </setting>
-        <setting name="CentralUsername" serializeAs="String">
-            <value>sa</value>
-        </setting>
-        <setting name="LocalDbName" serializeAs="String">
-            <value>cms2_Beta3</value>
-        </setting>
-        <setting name="CentralServerIp" serializeAs="String">
-            <value>192.168.5.1</value>
-        </setting>
-        <setting name="CentralPassword" serializeAs="String">
-            <value>d0me$tic$QL</value>
-        </setting>
-        <setting name="IsSynchronizationSetup" serializeAs="String">
-            <value>False</value>
-        </setting>
-        <setting name="Filter" serializeAs="String">
-            <value>Manila</value>
-        </setting>
+      <setting name="DeviceCode" serializeAs="String">
+        <value>S005</value>
+      </setting>
+      <setting name="DeviceRevenueUnitId" serializeAs="String">
+        <value>00000000-0000-0000-0000-000000000000</value>
+      </setting>
+      <setting name="DeviceBcoId" serializeAs="String">
+        <value>00000000-0000-0000-0000-000000000000</value>
+      </setting>
+      <setting name="LocalDbUsername" serializeAs="String">
+        <value>sa</value>
+      </setting>
+      <setting name="CentralDbName" serializeAs="String">
+        <value>cms2_Beta3</value>
+      </setting>
+      <setting name="CentralUsername" serializeAs="String">
+        <value>sa</value>
+      </setting>
+      <setting name="IsSynchronizationSetup" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="Filter" serializeAs="String">
+        <value>Manila</value>
+      </setting>
+      <setting name="LocalDbPassword" serializeAs="String">
+        <value>d0me$tic$QL</value>
+      </setting>
+      <setting name="LocalDbServer" serializeAs="String">
+        <value>192.168.5.1</value>
+      </setting>
+      <setting name="LocalDbName" serializeAs="String">
+        <value>cms2_Beta3</value>
+      </setting>
+      <setting name="CentralServerIp" serializeAs="String">
+        <value>192.168.5.1</value>
+      </setting>
+      <setting name="CentralPassword" serializeAs="String">
+        <value>d0me$tic$QL</value>
+      </setting>
     </CMS2.Client.Properties.Settings>
   </userSettings>
 </configuration>
