--- a/CMS2.Client/App.config
+++ b/CMS2.Client/App.config
@@ -16,7 +16,7 @@
     <add key="DeviceCode" value="S500" />
     <add key="RUId" value="00000000-0000-0000-0000-000000000000" />
     <add key="BcoId" value="5F668905-BEE3-4BEA-BD17-A284ACBDFC2C" />
-    <add key="isSync"  value="false"/>
+    <add key="isSync"  value="true"/>
     <add key="Filter"  value="Manila"/>
     <add key="isSubserver" value="false"/>
   </appSettings>
