--- a/CMS2.Client/App.config
+++ b/CMS2.Client/App.config
@@ -13,16 +13,16 @@
   </startup>
 
   <appSettings>
-    <add key="DeviceCode" value="S500" />
+    <add key="DeviceCode" value="" />
     <add key="RUId" value="00000000-0000-0000-0000-000000000000" />
     <add key="BcoId" value="5F668905-BEE3-4BEA-BD17-A284ACBDFC2C" />
-    <add key="isSync"  value="true"/>
+    <add key="isSync"  value="false"/>
     <add key="Filter"  value="Manila"/>
     <add key="isSubserver" value="false"/>
   </appSettings>
   <connectionStrings>
-    <add name="Cms" connectionString="Data Source=192.168.5.3;Initial Catalog=cms2_Beta4;User ID=sa;Password=Ap123456#;Connect Timeout=20;" providerName="System.Data.SqlClient" />
-    <add name="CmsCentral" connectionString="Data Source=192.168.5.3;Initial Catalog=cms2_Beta4;User ID=sa;Password=Ap123456#;Connect Timeout=20;" providerName="System.Data.SqlClient" />
+    <add name="Cms" connectionString="Data Source=192.168.100.109;Initial Catalog=cms2_Beta6;User ID=sa;Password=Ap123456#;Connect Timeout=20;Pooling=true;Connection Lifetime = 0;" providerName="System.Data.SqlClient" />
+    <add name="CmsCentral" connectionString="Data Source=192.168.5.3;Initial Catalog=cms2_Beta4;User ID=sa;Password=Ap123456#;Connect Timeout=20;Pooling=true;Connection Lifetime = 0" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <entityFramework>
