--- a/CMS2.Client/App.config
+++ b/CMS2.Client/App.config
@@ -13,13 +13,13 @@
   <appSettings>
     <add key="DeviceCode" value="S500" />
     <add key="RUId" value="00000000-0000-0000-0000-000000000000" />
-    <add key="BcoId" value="B57149E3-7AA0-4F45-A478-84B1601E859F" />
-    <add key="isSync" value="false" />
+    <add key="BcoId" value="5F668905-BEE3-4BEA-BD17-A284ACBDFC2C" />
+    <add key="isSync" value="true" />
     <add key="Filter" value="" />
     <add key="isSubserver" value="false" />
   </appSettings>
   <connectionStrings>
-    <add name="Cms" connectionString="Data Source=192.168.0.58;Initial Catalog=cms2_Beta3;User ID=sa;Password=z@nixtri2016;Connect Timeout=180;" providerName="System.Data.SqlClient" />
+    <add name="Cms" connectionString="Data Source=121.96.38.24;Initial Catalog=cms2_Beta3;User ID=sa;Password=z@nixtri2016;Connect Timeout=180;" providerName="System.Data.SqlClient" />
     <add name="CmsCentral" connectionString="Data Source=192.168.5.3;Initial Catalog=cms2_Beta4;User ID=sa;Password=Ap123456#;Connect Timeout=20;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
