--- a/CMS2.Client/App.config
+++ b/CMS2.Client/App.config
@@ -16,11 +16,11 @@
     <add key="BcoId" value="5F668905-BEE3-4BEA-BD17-A284ACBDFC2C" /> <!--C1EB7945-E58E-4C46-957B-B20475CC8CA3-->
     <add key="isSync" value="false" />
     <add key="Filter" value="" />
-    <add key="isSubserver" value="false" />
+    <add key="isSubserver" value="true" />
   </appSettings>
   <connectionStrings>
     <add name="Cms" connectionString="Data Source=localhost;Initial Catalog=CMS24TEST;User ID=sa;Password=sqlserver;Connect Timeout=180;Connection Lifetime=0;Pooling=true;" providerName="System.Data.SqlClient" />
-    <add name="CmsCentral" connectionString="Data Source=192.168.5.3;Initial Catalog=cms2_Beta4;User ID=sa;Password=Ap123456#;Connect Timeout=20;" providerName="System.Data.SqlClient" />
+    <add name="CmsCentral" connectionString="Data Source=121.96.38.24;Initial Catalog=cms2_Beta3;User ID=sa;Password=z@nixtri2016;Connect Timeout=180;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
